--- a/pom.xml
+++ b/pom.xml
@@ -94,14 +94,14 @@
 	<distributionManagement>
 	    <repository>
 	      <id>nexus</id>
-	      <name>NVJ Releases Nexus Repository</name>
+	      <name>tesla-R</name>
 	      <url>http://localhost:8081/repository/tesla-R/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
-	      <name>NVJ Technologies Snapshot Nexus Repository </name>
-	      <url>http://localhost:8081/repository/tesla-snapshots/</url>
+	      <name>tesla-S</name>
+	      <url>http://localhost:8081/repository/tesla-R/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
